# the_bowery

./: .gitignore  Cargo.toml  DESIGN-NATIVE-SQL.md  DESIGN.md  IMPLEMENTATION.md  INSTALL.md  README.md  SECURITY-AUDIT-PHASE9.md  the_bowery_design.md
.github/workflows/: ci.yml  release.yml
crates/bowery-agent/: Cargo.toml
crates/bowery-agent/src/: agent.rs  bloom_publisher.rs  config.rs  inbox.rs  lib.rs  main.rs  response_bpf.rs  sql_tables.rs  whisper_qa.rs
crates/bowery-agent/tests/: analyzer_pipeline.rs  bloom_publisher.rs  event_pipeline.rs  llm_pipeline.rs  operator_command.rs  operator_inbox.rs  response_engine.rs  two_agents.rs  whisper_qa.rs
crates/bowery-analysis/: Cargo.toml
crates/bowery-analysis/src/: analyzer.rs  episode.rs  lib.rs  peer_select.rs  role.rs  rule.rs  score.rs
crates/bowery-baseline/: Cargo.toml
crates/bowery-baseline/src/: lib.rs
crates/bowery-cli/: Cargo.toml
crates/bowery-cli/src/: alerts.rs  audit.rs  doctor.rs  exec.rs  lib.rs  main.rs  model.rs  peers.rs
crates/bowery-console/: Cargo.toml
crates/bowery-console/src/: app.rs  input.rs  main.rs  palette.rs  theme.rs
crates/bowery-console/src/panes/: alerts.rs  audit.rs  chat.rs  chat_system_prompt.txt  doctor.rs  help.rs  map.rs  mod.rs  peers.rs  query.rs  stub.rs
crates/bowery-crypto/: Cargo.toml
crates/bowery-crypto/src/: lib.rs
crates/bowery-ebpf/: Cargo.toml  rust-toolchain.toml
crates/bowery-ebpf-loader/: Cargo.toml
crates/bowery-ebpf-loader/examples/: lsm_block.rs  probe.rs
crates/bowery-ebpf-loader/src/: lib.rs
crates/bowery-ebpf/.cargo/: config.toml
crates/bowery-ebpf/src/: main.rs
crates/bowery-events/: Cargo.toml
crates/bowery-events/src/: enrich.rs  lib.rs  source.rs
crates/bowery-llm/: Cargo.toml
crates/bowery-llm/src/: backend.rs  chat.rs  chat_llama_cpp.rs  context.rs  lib.rs  llama_cpp.rs  parse.rs  prompt.rs  queue.rs
crates/bowery-mesh/: Cargo.toml
crates/bowery-mesh/src/: lib.rs
crates/bowery-osquery/: Cargo.toml
crates/bowery-osquery/src/: lib.rs
crates/bowery-proto/: Cargo.toml
crates/bowery-proto/src/: lib.rs
crates/bowery-response/: Cargo.toml
crates/bowery-response/src/: action.rs  audit.rs  engine.rs  lib.rs  policy.rs  process_kill.rs
crates/bowery-response/tests/: audit_tamper_proptest.rs
crates/bowery-sql/: Cargo.toml
crates/bowery-sql/src/: lib.rs
crates/bowery-sysquery/: Cargo.toml
crates/bowery-sysquery/src/: lib.rs
crates/bowery-tables/: Cargo.toml
crates/bowery-tables/src/: crontab.rs  file_funcs.rs  interfaces.rs  kernel_modules.rs  last.rs  lib.rs  listening_ports.rs  logged_in_users.rs  mounts.rs  os_version.rs  process_open_sockets.rs  processes.rs  system_info.rs  systemd_units.rs  users.rs  utmp.rs
crates/bowery-whisper/: Cargo.toml
crates/bowery-whisper/src/: envelope.rs  fingerprint.rs  forwarding.rs  known_neighbors.rs  lib.rs  pool.rs  qa.rs  replay.rs  tls.rs  transport.rs
crates/bowery-whisper/tests/: bloom_proptest.rs  replay_proptest.rs
deploy/: agent.toml.example
deploy/debian/: postinst  postrm  prerm
deploy/systemd/: bowery-agent.service  bowery.slice
docs/: CONSOLE.md  REMOTE_TESTING.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: audit_envelope_parse.rs  sealer_open.rs  whisper_envelope_decode.rs
local-bin/: bowery
scripts/: .xtest.env.example  build-ebpf  integration-sql-test.sh  xtest
