[workspace]
resolver = "3"
members = [
    "crates/bowery-agent",
    "crates/bowery-cli",
    "crates/bowery-crypto",
    "crates/bowery-proto",
    "crates/bowery-whisper",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
authors = ["Julien Vehent <julien.vehent@gmail.com>"]
repository = "https://github.com/jvehent/the-bowery"
homepage = "https://github.com/jvehent/the-bowery"
readme = "README.md"

[workspace.dependencies]
# Internal
bowery-crypto = { path = "crates/bowery-crypto", version = "0.0.1" }
bowery-proto = { path = "crates/bowery-proto", version = "0.0.1" }
bowery-whisper = { path = "crates/bowery-whisper", version = "0.0.1" }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Test helpers
tempfile = "3"

# Wire format
prost = "0.13"
bytes = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic noise reduction:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "limited"
