[workspace]
resolver = "3"
members = [
    "crates/bowery-agent",
    "crates/bowery-analysis",
    "crates/bowery-baseline",
    "crates/bowery-cli",
    "crates/bowery-crypto",
    "crates/bowery-ebpf-loader",
    "crates/bowery-events",
    "crates/bowery-llm",
    "crates/bowery-mesh",
    "crates/bowery-proto",
    "crates/bowery-response",
    "crates/bowery-sql",
    "crates/bowery-tables",
    "crates/bowery-whisper",
]
# bowery-ebpf is its own workspace (compiles for bpfel-unknown-none).
# fuzz/ is its own workspace so libfuzzer-sys doesn't infect the main
# workspace dep graph (cargo-fuzz needs nightly + sanitizer flags).
exclude = ["crates/bowery-ebpf", "fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
authors = ["Julien Vehent <julien.vehent@gmail.com>"]
repository = "https://github.com/jvehent/the-bowery"
homepage = "https://github.com/jvehent/the-bowery"
readme = "README.md"

[workspace.dependencies]
# Internal
bowery-analysis = { path = "crates/bowery-analysis", version = "0.0.1" }
bowery-baseline = { path = "crates/bowery-baseline", version = "0.0.1" }
bowery-crypto = { path = "crates/bowery-crypto", version = "0.0.1" }
bowery-ebpf-loader = { path = "crates/bowery-ebpf-loader", version = "0.0.1" }
bowery-events = { path = "crates/bowery-events", version = "0.0.1" }
bowery-llm = { path = "crates/bowery-llm", version = "0.0.1" }
bowery-mesh = { path = "crates/bowery-mesh", version = "0.0.1" }
bowery-proto = { path = "crates/bowery-proto", version = "0.0.1" }
bowery-response = { path = "crates/bowery-response", version = "0.0.1" }
bowery-sql = { path = "crates/bowery-sql", version = "0.0.1" }
bowery-tables = { path = "crates/bowery-tables", version = "0.0.1" }
bowery-whisper = { path = "crates/bowery-whisper", version = "0.0.1" }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize", "pkcs8"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
hex = "0.4"

# TLS / transport
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
x509-parser = "0.16"
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Test helpers
tempfile = "3"
proptest = "1"

# Wire format
prost = "0.13"
bytes = "1"

# Mesh
chitchat = "0.10"
tokio-stream = "0.1"
futures = "0.3"

# Baseline storage
rusqlite = { version = "0.32", features = ["bundled", "hooks", "functions"] }

# Phase-9 host-state tables source
procfs = { version = "0.17", default-features = false }

# Async traits
async-trait = "0.1"

# eBPF userspace
aya = "0.13"
aya-log = "0.2"
libc = "0.2"

# Phase-7 response engine — POSIX signal delivery.
# Linux-only by design; the agent has no macOS/Windows story yet, so
# this doesn't constrain the platform matrix.
nix = { version = "0.29", default-features = false, features = ["signal"] }

# Optional LLM backend (compiled when bowery-llm/llama-cpp is enabled).
# Builds llama.cpp from C++ at build time; needs cmake + a C++ compiler.
llama-cpp-2 = { version = "0.1", default-features = false }

[workspace.lints.rust]
# `deny` (not `forbid`) so individual crates that genuinely need unsafe
# (the BPF loader, for now) can opt in via `#![allow(unsafe_code)]`.
# Every crate that does so should document why at the file head.
unsafe_code = "deny"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic noise reduction:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "limited"
