[package]
name = "bowery-agent"
description = "The Bowery agent daemon — runs on each protected host."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "bowery-agent"
path = "src/main.rs"

[features]
default = []
# Enable the real Qwen3-0.6B inference path (llama.cpp). Adds a C++
# build dep (cmake + clang). Without this feature the agent only has
# the mock LLM backend.
llm-llama-cpp = ["bowery-llm/llama-cpp"]

[dependencies]
bowery-analysis = { workspace = true }
bowery-baseline = { workspace = true }
bowery-crypto = { workspace = true }
bowery-ebpf-loader = { workspace = true }
bowery-events = { workspace = true }
bowery-llm = { workspace = true }
bowery-mesh = { workspace = true }
bowery-proto = { workspace = true }
bowery-response = { workspace = true }
bowery-whisper = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
humantime-serde = "1"
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bowery-analysis = { workspace = true }
bowery-llm = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
