[package]
name = "bowery-cli"
description = "Operator CLI for The Bowery — issues signed messages into the mesh."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "bowery"
path = "src/main.rs"

[dependencies]
bowery-crypto = { workspace = true }
bowery-proto = { workspace = true }
bowery-whisper = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
humantime = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
