[package]
name = "bowery-console"
description = "Interactive ncurses operator console for The Bowery (ratatui)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "bowery-console"
path = "src/main.rs"

[features]
default = []
# Real Gemma 4 chatbot via llama.cpp. Off by default so a console
# binary built for "just the panes" stays small (~few MB instead of
# ~30 MB once llama.cpp is linked) and doesn't require a C++
# toolchain at build time.
llm-llama-cpp = ["bowery-llm/llama-cpp"]

[dependencies]
bowery-cli = { workspace = true }
bowery-crypto = { workspace = true }
bowery-llm = { workspace = true }
bowery-proto = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
humantime = "2"
ratatui = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
