[package]
name = "bowery-crypto"
description = "Identity keys, signing, and fingerprints for The Bowery agents and operators."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
