[package]
name = "bowery-llm"
description = "Local LLM analyzer for The Bowery — Qwen3-0.6B target. Mock backend by default; real llama.cpp backend behind the `llama-cpp` feature."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
# Real on-device inference via llama-cpp-2 against a Qwen3-0.6B GGUF.
# Adds a C++ build dep (llama.cpp via cmake). Without this feature
# the crate ships only the mock backend + JSON parser.
llama-cpp = ["dep:llama-cpp-2"]

[dependencies]
bowery-analysis = { workspace = true }
bowery-events = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing = { workspace = true }

llama-cpp-2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
