[package]
name = "bowery-mesh"
description = "SWIM-style gossip layer for The Bowery — chitchat-backed membership and cluster KV."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bowery-crypto = { workspace = true }

base64 = { workspace = true }
chitchat = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[lints]
workspace = true
