[package]
name = "bowery-osquery"
description = "Phase-6b osquery subprocess wrapper for The Bowery agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
