[package]
name = "bowery-proto"
description = "Wire-format messages for The Bowery's whispering protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }

[lints]
workspace = true
