[package]
name = "bowery-response"
description = "Phase-7 response engine: typed actions, policy gating, and a pluggable executor trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bowery-crypto = { workspace = true }

async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
