[package]
name = "bowery-tables"
description = "Phase-9 host-state tables for Bowery's SQL surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
procfs = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
