[package]
name = "bowery-whisper"
description = "The Bowery whispering protocol — envelope crypto, replay protection, and (later) QUIC RPC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bowery-crypto = { workspace = true }
bowery-proto = { workspace = true }

ed25519-dalek = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
