[package]
name = "bowery-whisper"
description = "The Bowery whispering protocol — envelope crypto, replay protection, and (later) QUIC RPC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bowery-crypto = { workspace = true }
bowery-proto = { workspace = true }

ed25519-dalek = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[lints]
workspace = true
